--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
                     <li class="nav-item"><a href="#" class="nav-link">Departments</a></li>
                 </ul>
             </nav>
+            <section class="sec-one">
+                <img id="img-logo" src="./res/sygnet.png" alt="">
+                <p class="first-h1">Making the healthcare experience more human</p>
+                <div class="">
+                    <div class="">
+                        <p class="">We want patients to find the perfect doctor and book an <br> 
+                        appointment in the most easy way. The patient journey should be <br>
+                        enjoyable, and that's why we are always next to them: to help them <br>
+                        find the best possible care. Anytime, anywhere.
+                        </p>
+                    </div>
+                    <div class="">
+                        <p class=""> We also help doctors to better manage their practice and build their <br>
+                            online reputation. With our integrated end-to-end solution, doctors <br>
+                            are able not only to improve their online presence, but also to <br>
+                            devote their time to what really matters: their patients.
+                        </p>
+                    </div>
+                </div>
+            </section>
         </header>
         
     </body>
