--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <header class="banner">
             <nav class="navigation">
-                <img id="logo" src="./res/logo-default-group-en.svg" alt="">  
+                <a class="logo-link" href="index.html"><img id="logo" src="./res/logo-default-group-en.svg" alt=""></a> 
                 <ul class="nav-items">
                     <li class="nav-item"><a href="#" class="nav-link-s">About Us</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Career</a></li>
@@ -21,24 +21,48 @@
             <section class="sec-one">
                 <img id="img-logo" src="./res/sygnet.png" alt="">
                 <p class="first-h1">Making the healthcare experience more human</p>
-                <div class="">
-                    <div class="">
-                        <p class="">We want patients to find the perfect doctor and book an <br> 
-                        appointment in the most easy way. The patient journey should be <br>
-                        enjoyable, and that's why we are always next to them: to help them <br>
-                        find the best possible care. Anytime, anywhere.
-                        </p>
-                    </div>
-                    <div class="">
-                        <p class=""> We also help doctors to better manage their practice and build their <br>
-                            online reputation. With our integrated end-to-end solution, doctors <br>
-                            are able not only to improve their online presence, but also to <br>
-                            devote their time to what really matters: their patients.
-                        </p>
-                    </div>
-                </div>
             </section>
         </header>
-        
+        <main>
+            <div class="main-div">
+                <div class="div-para-one">
+                    <p class="para-one">
+                        We want patients to find the perfect doctor and book an<br> appointment in the most easy way. The patient journey should be<br> enjoyable, and that's why we are always next to them: to help them<br> find the best possible care. Anytime, anywhere.
+                    </p>
+                </div>
+
+                <div class="div-para-two">
+                    <p class="para-two">
+                        We also help doctors to better manage their practice and build their<br> online reputation. With our integrated end-to-end solution, doctors<br> are able not only to improve their online presence, but also to<br> devote their time to what really matters: their patients.
+                    </p>
+                </div>
+            </div>
+            <div class="color-div-2">
+                <div class="green-div">
+                    <div class="green-containt">
+                        <img id="pat-logo" src="./res/icon-patients.svg" alt="">
+                        <h2 class="green-h2">For patients</h2><br>
+                        <p class="green-para">Find a doctor, book a<br>visit and solve any <br>health-related doubt</p>
+                    </div>
+                </div>
+
+                <div class="blue-div">
+                    <div class="blue-containt">
+                        <img id="doc-logo" src="./res/icon-doctors.svg" alt="">
+                        <h2 class="blue-h2">For doctors</h2><br>
+                        <p class="blue-para">Save time managing<br>visits and cut no-<br>shows by half</p>
+                    </div>
+                </div>
+
+                <div class="black-div">
+                    <div class="black-containt">
+                        <img id="cli-logo" src="./res/icon-clinics.svg" alt="">
+                        <h2 class="black-h2">For clinics</h2><br>
+                        <p class="black-para">Deliver an exceptional<br>patient experience in<br>your clinic</p>
+                    </div>
+                </div>
+            </div>
+            <div class="test"></div>
+        </main>
     </body>
 </html>
